--- a/styles/all.css
+++ b/styles/all.css
@@ -1,5 +1,5 @@
 :root {
-  --font-family: "Roboto", sans-serif;
+  --font-family: "Inter", sans-serif;
   --lightest-color: #fcfcff;
   --light-second-color: #fff7ec;
   --light-third-color: #fed59b;
@@ -17,6 +17,7 @@
   --p-color: var(--description-color);
 
   --navbar-height: 3.5rem;
+  --description-font-size: 1rem;
   
 }
 /* animations */
@@ -35,7 +36,7 @@
 @keyframes fade-in-down {
   from {
     opacity: 0;
-    transform: translateY(-30px);
+    transform: translateY(-30rem);
   }
   to {
     opacity: 1;
@@ -84,11 +85,9 @@ p {
 }
 
 h2 {
-  color: #000000;
+  color: var(--heading-color);
   font-size: 2rem;
   font-weight: 500;
-  line-height: 1.3;
-  margin-bottom: 1rem;
 }
 
 h3 {
@@ -169,7 +168,7 @@ h4 {
   box-sizing: border-box;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  margin: 5em auto;
+  /* margin: 5em auto; */
 }
 
 .sidebar {
@@ -247,29 +246,52 @@ h4 {
 
 
 .about p {
-  padding-left: 5%;
+  /* padding-left: 5%; */
   padding-right: 5%;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   width: 75%;
 }
 
-
-.about p li b {
-  
-  color: var(--primary-color);
+.about p b {
+  color: var(--heading-color)
 }
 
 .content {
-  /* margin-top: 5rem; */
-  /* margin-bottom: 10rem; */
+  margin-top: 5rem;
+  margin-bottom: 10rem;
   padding-top: 10rem;
+  transform: translateY(4rem);
   opacity: 0;
-  animation-name: fade-in-up;
+  transition: 1s ease;
+  /* animation-name: fade-in-up;
   animation-duration: 1s;
   animation-fill-mode: both;
   animation-timeline: view();
-  animation-range: entry 0% cover 80%;
+  animation-range: entry 0% cover 80%; */
 }
+
+/* for scrolling fade in-out animation*/
+.content--visible-up {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.content--visible-down {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.content--hidden-up {
+  opacity: 0;
+  transform: translateY(-2rem);
+}
+
+.content--hidden-down {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+
 
 .content h1 {
   color: var(--heading-color);
@@ -291,7 +313,7 @@ h4 {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   gap: 20px;
   align-items: center;
-  width: 90%
+  width: 90%;
 }
 
 .Job,
@@ -379,36 +401,25 @@ h4 {
 .publication-title, 
 .experience-title {
   color: var(--heading-color);
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: 500;
   line-height: 1.3;
   margin-bottom: 0.5rem;
 }
 
-.experience-duration {
-  color: var(--constrast-color); /* Gold-like color */
-  font-weight: 400; /* Normal font weight */
-  line-height: 1.6;
-  margin-bottom: 0.5rem;
-  margin-left: 1em;
-}
 
-.experience-category {
-  font-size: 85%; 
-  color: var(--category-color); 
-  margin-bottom: 0.5rem;
-  margin-left: 1em;
-}
 
 .publication-authors {
-  font-size: 90%;
+  font-size: var(--description-font-size);
   width: 90%;
-  font-weight: 350;
+  font-weight: 300;
   color: var(--description-color);
   margin-bottom: 0.5rem;
   margin-left: 1em;
   line-height: 1.4;
 }
+
+
 
 .publication-date,
 .publication-conference {
@@ -427,7 +438,7 @@ h4 {
     font-size: 90%;
     text-decoration: none;
     background-color: var(--lightest-color);
-    padding: 0.2rem 0.4rem;
+    padding: 0.5rem 0.8rem;
     margin: 0.5vh 0.1vh;
     border: 2px solid var(--primary-color);
     border-radius: 5px;
@@ -442,16 +453,33 @@ h4 {
   background-color: var(--primary-color);
 }
 
-
 .experience-description {
-  font-size: 90%;
+  font-size: var(--description-font-size);
+  width: 90%;
   font-weight: 300;
   color: var(--description-color); 
   margin-left: 1em;
   line-height: 1.6;
-  width: 90%;
   text-align: justify;
 }
+
+.experience-duration {
+  color: var(--constrast-color); /* Gold-like color */
+  font-weight: 400; /* Normal font weight */
+  line-height: 1.6;
+  margin-bottom: 0.5rem;
+  margin-left: 1em;
+}
+
+.experience-category {
+  font-size: 85%; 
+  color: var(--category-color); 
+  margin-bottom: 0.5rem;
+  margin-left: 1em;
+}
+
+
+
 
 
 .experience-description ul {
@@ -584,6 +612,20 @@ h4 {
     padding: 5%;
   }
 
+  .about p {
+    width: 100%
+  }
+  
+  .content h1 {
+    font-size: 2rem;
+  }
+
+  .publication-title .experience-title{
+    font-size: 0.8rem;
+  }
+
+
+
   .card {
     flex-direction: column;
     gap: 1em;
@@ -605,9 +647,10 @@ h4 {
     width: 100%;
     height: 50vh;
     background-color: var(--darkest-color);
-    align-self: auto;
-    align-items: center;
-    justify-content: center;
+    /* align-self: auto; */
+    /* align-items: center; */
+    justify-content: flex-start;
+    padding-left: 10%;
     z-index: 9;
 
     /* Start hidden by default */
