--- a/styles/all.css
+++ b/styles/all.css
@@ -252,8 +252,20 @@ h4 {
   width: 90%;
 }
 
-.about p b {
-  color: var(--heading-color)
+
+.about-research-interest-list {
+  list-style-type: disc;
+  padding-left: 10%;    
+  padding-right: 5%;
+  width: 90%;
+  font-size: 1.3rem;
+  color: var(--text-color);
+}
+
+.about-research-interest-list li {
+  margin-bottom: 0.5rem;
+  font-weight: 300;
+  color: var(--heading-color);  
 }
 
 .content {
@@ -617,6 +629,21 @@ h4 {
     /* background: #000; */
     font-size: var(--description-font-size);
   }
+
+  
+  .about-research-interest-list {
+    font-size: var(--description-font-size);
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 100%;
+  }
+  
+  .about-research-interest-list li {
+    margin-bottom: 0.5rem;
+    font-size: var(--description-font-size);
+    font-weight: 300;
+    color: var(--heading-color);
+  }
   
   .content h1 {
     font-size: 2rem;
@@ -625,8 +652,6 @@ h4 {
   .publication-title .experience-title{
     font-size: 0.8rem;
   }
-
-
 
   .card {
     flex-direction: column;
@@ -643,16 +668,16 @@ h4 {
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 3rem;
+    padding: 0;
     
     width: 100%;
     height: 50vh;
     background-color: var(--darkest-color);
     /* align-self: auto; */
-    /* align-items: center; */
+    align-items: center;
     justify-content: flex-start;
-    padding-left: 10%;
+    /* padding-left: 10%; */
     z-index: 9;
 
     /* Start hidden by default */
@@ -736,13 +761,50 @@ h4 {
   }
   .card-content p {
     font-size: 0.8rem;
+    text-align: left;
   }
   .nav-list li a {
     font-size: 16px;
   }
   .about p {
-    font-size: 13px;
+    font-size: 1rem;
+    text-align: left;
   }
+
+  .about-research-interest-list {
+    padding-left: 12%;
+    padding-right: 5%;
+    padding-bottom: 1rem;
+    width: 100%;
+  }
+
+  .about-research-interest-list li {
+    font-size: 1rem;
+    margin-bottom: 0.4rem;
+    font-weight: 300;
+    color: var(--heading-color);
+  }
+
+  .experience-title {
+    font-size: 1rem;
+  }
+  .publication-title {
+    font-size: 1rem;
+  }
+  .experience-description {
+    font-size: 0.8rem;
+    text-align: left;
+  }
+  .experience-duration,
+  .publication-date,
+  .publication-conference {
+    font-size: 0.8rem;
+  }
+  .publication-authors {
+    font-size: 0.8rem;
+  }
+
+
 }
 
 /* For screens larger than 768px but smaller than 1024px */
